fix: adjust alignment and padding in Tags component for improved layout

--- a/src/components/Tags.scss
+++ b/src/components/Tags.scss
@@ -2,14 +2,15 @@
   display: flex;
   gap: 15px;
   margin-bottom: 15px;
-  justify-content: center;
-    &__tag {
+  justify-content: flex-start;
+  align-items: center;
+    span {
     display: inline-block;
     color: white;
     background-color: #ff6060;
     font-size: 10px;
     font-weight: 700;
-    padding: 4px 13px;
+    padding: 4px 12px;
     text-align: center;
     border-radius: 5px;
   }
